# sdk-gen-rs

./: Cargo.toml  README.md  tmp
example/: example.json
example/output/: Cargo.toml
example/output/src/: lib.rs
gen_core/: Cargo.toml
gen_core/src/: lib.rs
gen_reqwest/: Cargo.toml
gen_reqwest/src/: lib.rs
gen_reqwest/templates/: lib.handlebars
src/: main.rs
